# TinyDNN-no-dinamic-memory

./: .gitattributes  .gitignore  README.md
tinyDNNAlt/models/: 907.model  950_tanhmnist.model  95_littlefmnist.model  95fmnist_elu.moel  960_fmnist.model  994_mnist.model  GTRSB-TANH.tinymodel  GTRSB-sigmoid.tinymodel  alexnet.tinymodel  cifar10.model  cifar10_74_relu.tinymodel  fashion_mnist_90_ptanh.tinymodel  mnist_98_ptanh.tinymodel  net_float_lr_0.1_ep_17_mb_16_nt_100.model  net_float_lr_0.1_ep_30_mb_16_nt_100.model  net_float_lr_10_ep_44_mb_16_nt_60000.model  net_float_lr_10_ep_60_mb_16_nt_60000.model  net_float_lr_1_ep_40_mb_16_nt_60000.model
tinyDNNAlt/scripts/: auto.sh  auto_cifar.sh  avgs.R  prepareARMEnv.sh  prepareEnv.sh  unpackImagenet.py
tinyDNNAlt/src/tinyDNNAlt_MPI/: .gitignore  CMakeLists.txt
tinyDNNAlt/src/tinyDNNAlt_MPI/examples/GTRSB/: train.cpp
tinyDNNAlt/src/tinyDNNAlt_MPI/examples/ImageNet/: CMakeLists.txt  test.cpp
tinyDNNAlt/src/tinyDNNAlt_MPI/examples/cifar10/: test.cpp  train.cpp
tinyDNNAlt/src/tinyDNNAlt_MPI/examples/mnist/: CMakeLists.txt  test_alt.cpp  train.cpp  train_mpi.cpp
tinyDNNAlt/src/tinyDNNAlt_MPI/examples/sve_test/: CMakeLists.txt
tinyDNNAlt/src/tinyDNNAlt_MPI/tiny_dnn/: config.h  node.h
tinyDNNAlt/src/tinyDNNAlt_MPI/tiny_dnn/activations/: pseudotanh_layer.h  shortcut.h  sigmoid_layer.h  softmax_layer.h
tinyDNNAlt/src/tinyDNNAlt_MPI/tiny_dnn/io/: cifar100_parser.h
tinyDNNAlt/src/tinyDNNAlt_MPI/tiny_dnn/layers/: deconvolutional_layer.h  dropout_layer.h  l2_normalization_layer.h  quantized_convolutional_layer.h  quantized_deconvolutional_layer.h
tinyDNNAlt/src/tinyDNNAlt_MPI/tiny_dnn/lossfunctions/: loss_function.h
tinyDNNAlt/src/tinyDNNAlt_MPI/tiny_dnn/models/: resnet34.h
tinyDNNAlt/src/tinyDNNAlt_MPI/tiny_dnn/util/: nms.h  product.h  report.h  serialization_layer_list.h  vector_utils.h
tinyDNNAlt/src/tinyDNNAlt_MPI/tinyboard/: broker.h
tinyDNNAlt/src/tinyDNNAlt_RISC_V/: CMakeLists.txt  Doxyfile  TODO.md
tinyDNNAlt/src/tinyDNNAlt_RISC_V/cmake/: summary.cmake
tinyDNNAlt/src/tinyDNNAlt_RISC_V/cmake/Modules/: FindCPP_POSIT.cmake
tinyDNNAlt/src/tinyDNNAlt_RISC_V/examples/: CMakeLists.txt
tinyDNNAlt/src/tinyDNNAlt_RISC_V/examples/GTRSB/: CMakeLists.txt  test.cpp
tinyDNNAlt/src/tinyDNNAlt_RISC_V/examples/ImageNet/: CMakeLists.txt  old_CMakeLists.txt_old  test.cpp  train.cpp  workspace.code-workspace
tinyDNNAlt/src/tinyDNNAlt_RISC_V/examples/cifar10/: CMakeLists.txt  train_hard.cpp
tinyDNNAlt/src/tinyDNNAlt_RISC_V/examples/mnist/: CMakeLists.txt  train.cpp
tinyDNNAlt/src/tinyDNNAlt_RISC_V/examples/sve_test/: out.s  test_naive.cpp
tinyDNNAlt/src/tinyDNNAlt_RISC_V/pretrained_models/: fmnist_relu.tinymodel  fmnist_sigmoid.tinymodel  gtrsb_elu.tinymodel  mnist_relu.tinymodel
tinyDNNAlt/src/tinyDNNAlt_RISC_V/tiny_dnn/: config.h  network.h
tinyDNNAlt/src/tinyDNNAlt_RISC_V/tiny_dnn/activations/: elu_layer.h  selu_layer.h  sigmoid_layer.h  softmax_layer.h  softplus_layer.h  tanh_layer.h
tinyDNNAlt/src/tinyDNNAlt_RISC_V/tiny_dnn/io/: display.h  imageNet_parser.h  mnist_parser.h
tinyDNNAlt/src/tinyDNNAlt_RISC_V/tiny_dnn/layers/: batch_normalization_layer.h  deconvolutional_layer.h  dropout_layer.h  flatten_layer.h  l2_normalization_layer.h  layer.h  lrn_layer.h  power_layer.h  quantized_deconvolutional_layer.h
tinyDNNAlt/src/tinyDNNAlt_RISC_V/tiny_dnn/models/: NNTrainSession.h  alexnet.h  lenet.h  models.h
tinyDNNAlt/src/tinyDNNAlt_RISC_V/tiny_dnn/util/: report.h  util.h
tinyDNNAlt/src/tinyDNNAlt_RISC_V/tinyboard/: tinyboard.h
tinyDNNAlt/src/tinyDNNAlt_SVE2_ver1/: CMakeLists.txt  README.md
tinyDNNAlt/src/tinyDNNAlt_SVE2_ver1/examples/GTRSB/: CMakeLists.txt  test.cpp  train.cpp
tinyDNNAlt/src/tinyDNNAlt_SVE2_ver1/examples/ImageNet/: CMakeLists.txt  test.cpp
tinyDNNAlt/src/tinyDNNAlt_SVE2_ver1/examples/caffe_converter/: caffe_converter.cpp
tinyDNNAlt/src/tinyDNNAlt_SVE2_ver1/examples/cifar10/: CMakeLists.txt  test.cpp  train.cpp  train_hard.cpp
tinyDNNAlt/src/tinyDNNAlt_SVE2_ver1/examples/mnist/: CMakeLists.txt  test_alt.cpp  train.cpp
tinyDNNAlt/src/tinyDNNAlt_SVE2_ver1/examples/qttest/: CMakeLists.txt  test.cpp
tinyDNNAlt/src/tinyDNNAlt_SVE2_ver1/examples/sve_test/: test.cpp
tinyDNNAlt/src/tinyDNNAlt_SVE2_ver1/tiny_dnn/: config.h  tiny_dnn.h
tinyDNNAlt/src/tinyDNNAlt_SVE2_ver1/tiny_dnn/activations/: asinh_layer.h  elu_layer.h  pseudotanh_layer.h  softsign_layer.h  tanh_layer.h
tinyDNNAlt/src/tinyDNNAlt_SVE2_ver1/tiny_dnn/io/: imageNet_parser.h
tinyDNNAlt/src/tinyDNNAlt_SVE2_ver1/tiny_dnn/layers/: average_unpooling_layer.h  batch_normalization_layer.h  l2_normalization_layer.h  recurrent_layer.h  residual.h
tinyDNNAlt/src/tinyDNNAlt_SVE2_ver1/tiny_dnn/models/: NNModel.h  NNTrainParams.h  NNTrainSession.h  alexnet.h  resnet34.h  vgg16.h
tinyDNNAlt/src/tinyDNNAlt_SVE2_ver1/tiny_dnn/optimizers/: optimizer.h
tinyDNNAlt/src/tinyDNNAlt_SVE2_ver1/tiny_dnn/util/: math_functions.h  product.h  (+5 more)
tinyDNNAlt/src/tinyDNNAlt_vanilla/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  etl_integration_test.cpp  prova.cpp  tiny_dnn.sln  uninstall.vcxproj  uninstall.vcxproj.filters
tinyDNNAlt/src/tinyDNNAlt_vanilla/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters
tinyDNNAlt/src/tinyDNNAlt_vanilla/examples/GTRSB/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  gtrsb_test.vcxproj  gtrsb_test_b16.vcxproj  gtrsb_test_b8.vcxproj  gtrsb_test_p10_0.vcxproj  gtrsb_test_p10_0.vcxproj.filters  gtrsb_test_p12_0.vcxproj  gtrsb_test_p14_0.vcxproj  gtrsb_test_p16_0.vcxproj  gtrsb_test_p16_1.vcxproj  gtrsb_test_p8_0.vcxproj  gtrsb_tests_type.vcxproj  gtrsb_train.vcxproj  gtrsb_train.vcxproj.filters  gtrsb_trains_type.vcxproj  gtrsb_trains_type.vcxproj.filters  test.cpp
tinyDNNAlt/src/tinyDNNAlt_vanilla/pretrained_models/: net_float_lr_10_ep_40_mb_16_nt_60000.model
tinyDNNAlt/src/tinyDNNAlt_vanilla/tiny_dnn/: config.h  network.h  node.h  nodes.h  tiny_dnn.h
tinyDNNAlt/src/tinyDNNAlt_vanilla/tinyboard/: pipehandler.h
tinyDNNAlt/workload/large/imagenet64/: reconstruct.sh
(+151 files in other folders)
